welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:21: error: '<-' expected but ')' found.
  for (x>-0 to (getMondeLargeur()-1)) {
                                    ^ZigZag:26: error: illegal start of simple expression
} 
^